syntax_semantics_analysis/antlr4-resources/antlr4-skeletons/cpp/C8086Parser.cpp

    #include <iostream>
    #include <fstream>
    #include <string>
    #include <cstdlib>
    #include "C8086Lexer.h"
	#include "symbol_table.hpp"


	extern SymbolTable* symTable;
    extern std::ofstream parserLogFile;
    extern std::ofstream errorFile;

    extern int syntaxErrorCount;


// Generated from C8086Parser.g4 by ANTLR 4.13.2


#include "C8086ParserListener.h"

#include "C8086Parser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct C8086ParserStaticData final {
  C8086ParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  C8086ParserStaticData(const C8086ParserStaticData&) = delete;
  C8086ParserStaticData(C8086ParserStaticData&&) = delete;
  C8086ParserStaticData& operator=(const C8086ParserStaticData&) = delete;
  C8086ParserStaticData& operator=(C8086ParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag c8086parserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<C8086ParserStaticData> c8086parserParserStaticData = nullptr;

void c8086parserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (c8086parserParserStaticData != nullptr) {
    return;
  }
#else
  assert(c8086parserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<C8086ParserStaticData>(
    std::vector<std::string>{
      "start", "program", "unit", "func_declaration", "func_definition", 
      "parameter_list", "invalid_param", "compound_statement", "var_declaration", 
      "declaration_list_err", "type_specifier", "declaration_list", "statements", 
      "statement", "expression_statement", "variable", "expression", "logic_expression", 
      "rel_expression", "simple_expression", "term", "unary_expression", 
      "factor", "argument_list", "arguments"
    },
    std::vector<std::string>{
      "", "", "", "", "", "'if'", "'else'", "'for'", "'while'", "'printf'", 
      "'return'", "'int'", "'float'", "'void'", "'('", "')'", "'{'", "'}'", 
      "'['", "']'", "';'", "','", "", "", "", "'++'", "'--'", "'!'", "", 
      "", "'='"
    },
    std::vector<std::string>{
      "", "LINE_COMMENT", "BLOCK_COMMENT", "STRING", "WS", "IF", "ELSE", 
      "FOR", "WHILE", "PRINTLN", "RETURN", "INT", "FLOAT", "VOID", "LPAREN", 
      "RPAREN", "LCURL", "RCURL", "LTHIRD", "RTHIRD", "SEMICOLON", "COMMA", 
      "ADDOP", "SUBOP", "MULOP", "INCOP", "DECOP", "NOT", "RELOP", "LOGICOP", 
      "ASSIGNOP", "ID", "CONST_INT", "CONST_FLOAT", "UNRECOGNIZED"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  c8086parserParserStaticData = std::move(staticData);
}

}

C8086Parser::C8086Parser(TokenStream *input) : C8086Parser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

C8086Parser::C8086Parser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  C8086Parser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *c8086parserParserStaticData->atn, c8086parserParserStaticData->decisionToDFA, c8086parserParserStaticData->sharedContextCache, options);
}

C8086Parser::~C8086Parser() {
  delete _interpreter;
}

const atn::ATN& C8086Parser::getATN() const {
  return *c8086parserParserStaticData->atn;
}

std::string C8086Parser::getGrammarFileName() const {
  return "C8086Parser.g4";
}

const std::vector<std::string>& C8086Parser::getRuleNames() const {
  return c8086parserParserStaticData->ruleNames;
}

const dfa::Vocabulary& C8086Parser::getVocabulary() const {
  return c8086parserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView C8086Parser::getSerializedATN() const {
  return c8086parserParserStaticData->serializedATN;
}


//----------------- StartContext ------------------------------------------------------------------

C8086Parser::StartContext::StartContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

C8086Parser::ProgramContext* C8086Parser::StartContext::program() {
  return getRuleContext<C8086Parser::ProgramContext>(0);
}


size_t C8086Parser::StartContext::getRuleIndex() const {
  return C8086Parser::RuleStart;
}

void C8086Parser::StartContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C8086ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStart(this);
}

void C8086Parser::StartContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C8086ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStart(this);
}

C8086Parser::StartContext* C8086Parser::start() {
  StartContext *_localctx = _tracker.createInstance<StartContext>(_ctx, getState());
  enterRule(_localctx, 0, C8086Parser::RuleStart);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(50);
    antlrcpp::downCast<StartContext *>(_localctx)->p = program(0);

            writeIntoparserLogFile(
                "Line " + antlrcpp::downCast<StartContext *>(_localctx)->p->lineNo + ": start : program\n"
            );

            symTable->printAllScopes();

            writeIntoparserLogFile(
    		             "Total number of lines: " + antlrcpp::downCast<StartContext *>(_localctx)->p->lineNo + "\n" +
                "Total number of errors: " + std::to_string(syntaxErrorCount)
            );
    	
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramContext ------------------------------------------------------------------

C8086Parser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

C8086Parser::UnitContext* C8086Parser::ProgramContext::unit() {
  return getRuleContext<C8086Parser::UnitContext>(0);
}

C8086Parser::ProgramContext* C8086Parser::ProgramContext::program() {
  return getRuleContext<C8086Parser::ProgramContext>(0);
}


size_t C8086Parser::ProgramContext::getRuleIndex() const {
  return C8086Parser::RuleProgram;
}

void C8086Parser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C8086ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void C8086Parser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C8086ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


C8086Parser::ProgramContext* C8086Parser::program() {
   return program(0);
}

C8086Parser::ProgramContext* C8086Parser::program(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  C8086Parser::ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, parentState);
  C8086Parser::ProgramContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 2;
  enterRecursionRule(_localctx, 2, C8086Parser::RuleProgram, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(54);
    antlrcpp::downCast<ProgramContext *>(_localctx)->u = unit();

            antlrcpp::downCast<ProgramContext *>(_localctx)->text =  antlrcpp::downCast<ProgramContext *>(_localctx)->u->text;
            antlrcpp::downCast<ProgramContext *>(_localctx)->lineNo =  antlrcpp::downCast<ProgramContext *>(_localctx)->u->lineNo;
            writeIntoparserLogFile(
                "Line " + _localctx->lineNo + ": program : unit\n\n" +
                _localctx->text + "\n"
            );
        
    _ctx->stop = _input->LT(-1);
    setState(63);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        _localctx = _tracker.createInstance<ProgramContext>(parentContext, parentState);
        _localctx->p = previousContext;
        pushNewRecursionContext(_localctx, startState, RuleProgram);
        setState(57);

        if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
        setState(58);
        antlrcpp::downCast<ProgramContext *>(_localctx)->u = unit();

                          antlrcpp::downCast<ProgramContext *>(_localctx)->text =  antlrcpp::downCast<ProgramContext *>(_localctx)->p->text + "\n" + antlrcpp::downCast<ProgramContext *>(_localctx)->u->text;
                          antlrcpp::downCast<ProgramContext *>(_localctx)->lineNo =  antlrcpp::downCast<ProgramContext *>(_localctx)->u->lineNo; 
                          writeIntoparserLogFile(
                              "Line " + _localctx->lineNo + ": program : program unit\n\n" +
                              _localctx->text + "\n"
                          );
                       
      }
      setState(65);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- UnitContext ------------------------------------------------------------------

C8086Parser::UnitContext::UnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

C8086Parser::Var_declarationContext* C8086Parser::UnitContext::var_declaration() {
  return getRuleContext<C8086Parser::Var_declarationContext>(0);
}

C8086Parser::Func_declarationContext* C8086Parser::UnitContext::func_declaration() {
  return getRuleContext<C8086Parser::Func_declarationContext>(0);
}

C8086Parser::Func_definitionContext* C8086Parser::UnitContext::func_definition() {
  return getRuleContext<C8086Parser::Func_definitionContext>(0);
}


size_t C8086Parser::UnitContext::getRuleIndex() const {
  return C8086Parser::RuleUnit;
}

void C8086Parser::UnitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C8086ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUnit(this);
}

void C8086Parser::UnitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C8086ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUnit(this);
}

C8086Parser::UnitContext* C8086Parser::unit() {
  UnitContext *_localctx = _tracker.createInstance<UnitContext>(_ctx, getState());
  enterRule(_localctx, 4, C8086Parser::RuleUnit);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(75);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(66);
      antlrcpp::downCast<UnitContext *>(_localctx)->v = var_declaration();

              antlrcpp::downCast<UnitContext *>(_localctx)->text =  antlrcpp::downCast<UnitContext *>(_localctx)->v->text;
              antlrcpp::downCast<UnitContext *>(_localctx)->lineNo =  std::to_string((antlrcpp::downCast<UnitContext *>(_localctx)->v != nullptr ? (antlrcpp::downCast<UnitContext *>(_localctx)->v->stop) : nullptr)->getLine());
              writeIntoparserLogFile(
                  "Line " + std::to_string((antlrcpp::downCast<UnitContext *>(_localctx)->v != nullptr ? (antlrcpp::downCast<UnitContext *>(_localctx)->v->stop) : nullptr)->getLine()) + ": unit : var_declaration\n\n" +
                  _localctx->text + "\n"
              );
          
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(69);
      antlrcpp::downCast<UnitContext *>(_localctx)->f = func_declaration();

              antlrcpp::downCast<UnitContext *>(_localctx)->text =  antlrcpp::downCast<UnitContext *>(_localctx)->f->text;
              antlrcpp::downCast<UnitContext *>(_localctx)->lineNo =  std::to_string((antlrcpp::downCast<UnitContext *>(_localctx)->f != nullptr ? (antlrcpp::downCast<UnitContext *>(_localctx)->f->stop) : nullptr)->getLine());
              writeIntoparserLogFile(
                  "Line " + std::to_string((antlrcpp::downCast<UnitContext *>(_localctx)->f != nullptr ? (antlrcpp::downCast<UnitContext *>(_localctx)->f->stop) : nullptr)->getLine()) + ": unit : func_declaration\n\n" +
                  _localctx->text + "\n"
              );
          
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(72);
      antlrcpp::downCast<UnitContext *>(_localctx)->fd = func_definition();

              antlrcpp::downCast<UnitContext *>(_localctx)->text =  antlrcpp::downCast<UnitContext *>(_localctx)->fd->text;
              antlrcpp::downCast<UnitContext *>(_localctx)->lineNo =  antlrcpp::downCast<UnitContext *>(_localctx)->fd->lineNo;
              writeIntoparserLogFile(
                  "Line " + antlrcpp::downCast<UnitContext *>(_localctx)->fd->lineNo + ": unit : func_definition\n\n" +
                  _localctx->text + "\n"
              );
          
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Func_declarationContext ------------------------------------------------------------------

C8086Parser::Func_declarationContext::Func_declarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

C8086Parser::Type_specifierContext* C8086Parser::Func_declarationContext::type_specifier() {
  return getRuleContext<C8086Parser::Type_specifierContext>(0);
}

tree::TerminalNode* C8086Parser::Func_declarationContext::ID() {
  return getToken(C8086Parser::ID, 0);
}

tree::TerminalNode* C8086Parser::Func_declarationContext::LPAREN() {
  return getToken(C8086Parser::LPAREN, 0);
}

C8086Parser::Parameter_listContext* C8086Parser::Func_declarationContext::parameter_list() {
  return getRuleContext<C8086Parser::Parameter_listContext>(0);
}

tree::TerminalNode* C8086Parser::Func_declarationContext::RPAREN() {
  return getToken(C8086Parser::RPAREN, 0);
}

tree::TerminalNode* C8086Parser::Func_declarationContext::SEMICOLON() {
  return getToken(C8086Parser::SEMICOLON, 0);
}


size_t C8086Parser::Func_declarationContext::getRuleIndex() const {
  return C8086Parser::RuleFunc_declaration;
}

void C8086Parser::Func_declarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C8086ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunc_declaration(this);
}

void C8086Parser::Func_declarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C8086ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunc_declaration(this);
}

C8086Parser::Func_declarationContext* C8086Parser::func_declaration() {
  Func_declarationContext *_localctx = _tracker.createInstance<Func_declarationContext>(_ctx, getState());
  enterRule(_localctx, 6, C8086Parser::RuleFunc_declaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(93);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(77);
      antlrcpp::downCast<Func_declarationContext *>(_localctx)->t = type_specifier();
      setState(78);
      antlrcpp::downCast<Func_declarationContext *>(_localctx)->id = match(C8086Parser::ID);
      setState(79);
      antlrcpp::downCast<Func_declarationContext *>(_localctx)->lp = match(C8086Parser::LPAREN);

              insertIntoTable = false;
          
      setState(81);
      antlrcpp::downCast<Func_declarationContext *>(_localctx)->pl = parameter_list(0);
      setState(82);
      antlrcpp::downCast<Func_declarationContext *>(_localctx)->rp = match(C8086Parser::RPAREN);
      setState(83);
      antlrcpp::downCast<Func_declarationContext *>(_localctx)->sc = match(C8086Parser::SEMICOLON);

              antlrcpp::downCast<Func_declarationContext *>(_localctx)->text =  antlrcpp::downCast<Func_declarationContext *>(_localctx)->t->text + " " + antlrcpp::downCast<Func_declarationContext *>(_localctx)->id->getText() + antlrcpp::downCast<Func_declarationContext *>(_localctx)->lp->getText() + antlrcpp::downCast<Func_declarationContext *>(_localctx)->pl->text + antlrcpp::downCast<Func_declarationContext *>(_localctx)->rp->getText() + antlrcpp::downCast<Func_declarationContext *>(_localctx)->sc->getText();
      		SymbolInfo* s = symTable->insert(antlrcpp::downCast<Func_declarationContext *>(_localctx)->id->getText(), "ID");
          if (s != nullptr) {
      	    s->setFunction(true);
      	    s->setVariableType(antlrcpp::downCast<Func_declarationContext *>(_localctx)->t->text);
      	    s->setDeclared(true);
              int n = antlrcpp::downCast<Func_declarationContext *>(_localctx)->pl->ids.size();
              string* paramTypes = new string[n];
              for (int i = 0; i < n; ++i) paramTypes[i] = antlrcpp::downCast<Func_declarationContext *>(_localctx)->pl->ids[i].second;
              s->setParamTypes(paramTypes, n);
          }

              writeIntoparserLogFile(
                  "Line " + std::to_string((antlrcpp::downCast<Func_declarationContext *>(_localctx)->t != nullptr ? (antlrcpp::downCast<Func_declarationContext *>(_localctx)->t->stop) : nullptr)->getLine()) + ": func_declaration : type_specifier ID LPAREN parameter_list RPAREN SEMICOLON\n\n" +
                  _localctx->text + "\n"        
              );
          
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(86);
      antlrcpp::downCast<Func_declarationContext *>(_localctx)->t = type_specifier();
      setState(87);
      antlrcpp::downCast<Func_declarationContext *>(_localctx)->id = match(C8086Parser::ID);
      setState(88);
      antlrcpp::downCast<Func_declarationContext *>(_localctx)->lp = match(C8086Parser::LPAREN);
      setState(89);
      antlrcpp::downCast<Func_declarationContext *>(_localctx)->rp = match(C8086Parser::RPAREN);
      setState(90);
      antlrcpp::downCast<Func_declarationContext *>(_localctx)->sc = match(C8086Parser::SEMICOLON);

              antlrcpp::downCast<Func_declarationContext *>(_localctx)->text =  antlrcpp::downCast<Func_declarationContext *>(_localctx)->t->text + " " + antlrcpp::downCast<Func_declarationContext *>(_localctx)->id->getText() + antlrcpp::downCast<Func_declarationContext *>(_localctx)->lp->getText() + antlrcpp::downCast<Func_declarationContext *>(_localctx)->rp->getText() + antlrcpp::downCast<Func_declarationContext *>(_localctx)->sc->getText();
      		SymbolInfo* s = symTable->insert(antlrcpp::downCast<Func_declarationContext *>(_localctx)->id->getText(), "ID");
              if (s != nullptr) {
                  s->setFunction(true);
      	        s->setVariableType(antlrcpp::downCast<Func_declarationContext *>(_localctx)->t->text);
      		    s->setDeclared(true);
      	        s->setParamTypes(nullptr, 0);
              }

              writeIntoparserLogFile(
                  "Line " + std::to_string((antlrcpp::downCast<Func_declarationContext *>(_localctx)->t != nullptr ? (antlrcpp::downCast<Func_declarationContext *>(_localctx)->t->stop) : nullptr)->getLine()) + ": func_declaration : type_specifier ID LPAREN RPAREN SEMICOLON\n\n" +
                  _localctx->text + "\n"
              );
          
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Func_definitionContext ------------------------------------------------------------------

C8086Parser::Func_definitionContext::Func_definitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

C8086Parser::Type_specifierContext* C8086Parser::Func_definitionContext::type_specifier() {
  return getRuleContext<C8086Parser::Type_specifierContext>(0);
}

tree::TerminalNode* C8086Parser::Func_definitionContext::ID() {
  return getToken(C8086Parser::ID, 0);
}

tree::TerminalNode* C8086Parser::Func_definitionContext::LPAREN() {
  return getToken(C8086Parser::LPAREN, 0);
}

C8086Parser::Parameter_listContext* C8086Parser::Func_definitionContext::parameter_list() {
  return getRuleContext<C8086Parser::Parameter_listContext>(0);
}

tree::TerminalNode* C8086Parser::Func_definitionContext::RPAREN() {
  return getToken(C8086Parser::RPAREN, 0);
}

C8086Parser::Compound_statementContext* C8086Parser::Func_definitionContext::compound_statement() {
  return getRuleContext<C8086Parser::Compound_statementContext>(0);
}


size_t C8086Parser::Func_definitionContext::getRuleIndex() const {
  return C8086Parser::RuleFunc_definition;
}

void C8086Parser::Func_definitionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C8086ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunc_definition(this);
}

void C8086Parser::Func_definitionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<C8086ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunc_definition(this);
}

C8086Parser::Func_definitionContext* C8086Parser::func_definition() {
  Func_definitionContext *_localctx = _tracker.createInstance<Func_definitionContext>(_ctx, getState());
  enterRule(_localctx, 8, C8086Parser::RuleFunc_definition);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(116);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(95);
      antlrcpp::downCast<Func_definitionContext *>(_localctx)->t = type_specifier();
      setState(96);
      antlrcpp::downCast<Func_definitionContext *>(_localctx)->id = match(C8086Parser::ID);
       
      	    insertIntoTable = true;
      	    SymbolInfo* sym = symTable->lookup(antlrcpp::downCast<Func_definitionContext *>(_localctx)->id->getText());
              string errorText = "";
          
          if (!sym) {
              
              sym = symTable->insert(antlrcpp::downCast<Func_definitionContext *>(_localctx)->id->getText(), "ID");
              sym->setFunction(true);
              sym->setDefined(true);
              sym->setDeclared(false);
              sym->setVariableType(antlrcpp::downCast<Func_definitionContext *>(_localctx)->t->text);
      	    
          }
          
          
      setState(98);
      antlrcpp::downCast<Func_definitionContext *>(_localctx)->lp = match(C8086Parser::LPAREN);

      	        symTable->EnterScope();
          
      setState(100);
      antlrcpp::downCast<Func_definitionContext *>(_localctx)->pl = parameter_list(0);
      setState(101);
      antlrcpp::downCast<Func_definitionContext *>(_localctx)->rp = match(C8086Parser::RPAREN);

              antlrcpp::downCast<Func_definitionContext *>(_localctx)->param_ids =  antlrcpp::downCast<Func_definitionContext *>(_localctx)->pl->ids;
      	        sym = symTable->lookup(antlrcpp::downCast<Func_definitionContext *>(_localctx)->id->getText());
      	            
                  if(sym->getDeclared()==false) {
      	                int n = antlrcpp::downCast<Func_definitionContext *>(_localctx)->pl->ids.size();
                      string* paramTypes = new string[n];
                  for (int i = 0; i < n; ++i) paramTypes[i] = antlrcpp::downCast<Func_definitionContext *>(_localctx)->pl->ids[i].second;
                      if(sym) {
                      sym->setParamTypes(paramTypes, n);
                      }
                  }
      	         
              if (!sym->getFunction()) {
                  
      	            writeIntoErrorFile("Error at line " + std::to_string(antlrcpp::downCast<Func_definitionContext *>(_localctx)->id->getLine()) + ": Multiple declaration of " + antlrcpp::downCast<Func_definitionContext *>(_localctx)->id->getText() + "\n");
                  errorText = "Error at line " + std::to_string(antlrcpp::downCast<Func_definitionContext *>(_localctx)->id->getLine()) + ": Multiple declaration of " + antlrcpp::downCast<Func_definitionContext *>(_localctx)->id->getText() + "\n";
                  syntaxErrorCount++;
      	            writeIntoparserLogFile(errorText);
              } else {
                  
      	            if (sym->getVariableType() != antlrcpp::downCast<Func_definitionContext *>(_localctx)->t->text) {
      	                writeIntoErrorFile("Error at line " + std::to_string(antlrcpp::downCast<Func_definitionContext *>(_localctx)->id->getLine()) + ": Return type mismatch of " + antlrcpp::downCast<Func_definitionContext *>(_localctx)->id->getText() + "\n");
                          errorText = "Error at line " + std::to_string(antlrcpp::downCast<Func_definitionContext *>(_localctx)->id->getLine()) + ": Return type mismatch of " + antlrcpp::downCast<Func_definitionContext *>(_localctx)->id->getText() + "\n";
                      syntaxErrorCount++;
      	                writeIntoparserLogFile(errorText);
                  }
                  
      	        if (sym->getParamCount() != _localctx->param_ids.size()) {
      	                writeIntoErrorFile("Error at line " + std::to_string(antlrcpp::downCast<Func_definitionContext *>(_localctx)->id->getLine()) + ": Total number of arguments mismatch with declaration in function " + antlrcpp::downCast<Func_definitionContext *>(_localctx)->id->getText() + "\n");
                      errorText = "Error at line " + std::to_string(antlrcpp::downCast<Func_definitionContext *>(_localctx)->id->getLine()) + ": Total number of arguments mismatch with declaration in function " + antlrcpp::downCast<Func_definitionContext *>(_localctx)->id->getText() + "\n";
                      syntaxErrorCount++;
      	                writeIntoparserLogFile(errorText);
                  } else {
                      for (int i = 0; i < sym->getParamCount(); i++) {
                          if (sym->getParamTypes()[i] != _localctx->param_ids[i].second) {
                              writeIntoErrorFile("Line " + std::to_string(antlrcpp::downCast<Func_definitionContext *>(_localctx)->id->getLine()) + ": Type mismatch in parameter " + std::to_string(i+1) + " of function '" + antlrcpp::downCast<Func_definitionContext *>(_localctx)->id->getText() + "'");
                              syntaxErrorCount++;
      	                        writeIntoparserLogFile(errorText);
                          }
                      }
                  }
                  sym->setDefined(true);
              }
          
              // sym = symTable->lookup(antlrcpp::downCast<Func_definitionContext *>(_localctx)->id->getText());
      	    
      	        

            
      setState(103);
      antlrcpp::downCast<Func_definitionContext *>(_localctx)->cs = compound_statement(_localctx->param_ids);
